// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for autoRepair 1`] = `
{
  "buttons": 56,
  "inputs": 1,
  "lengthBucket": 302,
  "sha": "3fad84284fdc1e73",
  "svgs": 1,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for behaviorLab 1`] = `
{
  "buttons": 19,
  "inputs": 4,
  "lengthBucket": 57,
  "sha": "0d3904e5f4505c33",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for bikeLab 1`] = `
{
  "buttons": 11,
  "inputs": 0,
  "lengthBucket": 71,
  "sha": "cdfdd8ca7560ebcf",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for codingPlayground 1`] = `
{
  "buttons": 46,
  "inputs": 0,
  "lengthBucket": 117,
  "sha": "b44aace850170578",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for companionPlanting 1`] = `
{
  "buttons": 21,
  "inputs": 0,
  "lengthBucket": 104,
  "sha": "af8fb20395fbb998",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for decomposer 1`] = `
{
  "buttons": 30,
  "inputs": 0,
  "lengthBucket": 92,
  "sha": "dfff27a58c5b155a",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for economicsLab 1`] = `
{
  "buttons": 26,
  "inputs": 7,
  "lengthBucket": 68,
  "sha": "3f50d9c192b0905e",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for evoLab 1`] = `
{
  "buttons": 33,
  "inputs": 0,
  "lengthBucket": 217,
  "sha": "f6d2f37514a25314",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for firstResponse 1`] = `
{
  "buttons": 1,
  "inputs": 0,
  "lengthBucket": 9,
  "sha": "41c00f6a1864c99b",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for lifeSkills 1`] = `
{
  "buttons": 65,
  "inputs": 1,
  "lengthBucket": 308,
  "sha": "08e00236d9e097f5",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for llmLiteracy 1`] = `
{
  "buttons": 13,
  "inputs": 0,
  "lengthBucket": 149,
  "sha": "60ce42f5fc233a77",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for migration 1`] = `
{
  "buttons": 14,
  "inputs": 1,
  "lengthBucket": 45,
  "sha": "afe91bfc3dbcf939",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for oratory 1`] = `
{
  "buttons": 16,
  "inputs": 0,
  "lengthBucket": 57,
  "sha": "29bf741c8ef2de47",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for petsLab 1`] = `
{
  "buttons": 34,
  "inputs": 1,
  "lengthBucket": 170,
  "sha": "733ab140c29258e8",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for playlab 1`] = `
{
  "buttons": 32,
  "inputs": 4,
  "lengthBucket": 95,
  "sha": "0e464c1c8cd50834",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for renewablesLab 1`] = `
{
  "buttons": 17,
  "inputs": 0,
  "lengthBucket": 81,
  "sha": "33e33d48748724e4",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for singing 1`] = `
{
  "buttons": 30,
  "inputs": 0,
  "lengthBucket": 63,
  "sha": "48e52a95174bd098",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for stewardshipHub 1`] = `
{
  "buttons": 2,
  "inputs": 0,
  "lengthBucket": 17,
  "sha": "0be2f2fb13d5c4e1",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for typingPractice 1`] = `
{
  "buttons": 45,
  "inputs": 1,
  "lengthBucket": 198,
  "sha": "b8c6bdc6e98d069f",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for worldBuilder 1`] = `
{
  "buttons": 15,
  "inputs": 7,
  "lengthBucket": 63,
  "sha": "a7718d5d6633b37f",
  "svgs": 1,
}
`;
